# copilot-api-proxy

./: AGENTS.md  Cargo.toml  README.md
src/: amp.rs  amp_local.rs  api.rs  auth.rs  claude.rs  config.rs  droid.rs  droid_local.rs  gemini.rs  initiator.rs  lib.rs  llm.rs  main.rs  proxy.rs  server.rs  token_counter.rs
src/droid/: local.rs  mod.rs
src/web_backend/: brave.rs  jina.rs  mod.rs  model.rs  none.rs  searxng.rs  tavily.rs
